--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"db:push": "drizzle-kit push --config ./drizzle.config.ts",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"generate": "gql-gen --config codegen.yml"
 	},
 	"dependencies": {
 		"@apollo/server": "^4.11.3",
@@ -17,10 +18,12 @@
 		"@libsql/client": "^0.14.0",
 		"@scaleway/random-name": "^5.1.0",
 		"bcrypt": "^5.1.1",
+		"dnull": "^1.0.2",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.39.3",
 		"framer-motion": "^11.18.2",
 		"graphql": "^16.10.0",
+		"graphql-tag": "^2.12.6",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.378.0",
 		"next": "15.1.2",
@@ -33,6 +36,9 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@graphql-codegen/cli": "^5.0.5",
+		"@graphql-codegen/typescript": "^4.1.3",
+		"@graphql-codegen/typescript-resolvers": "^4.4.2",
 		"@types/bcrypt": "^5.0.2",
 		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^20",
